changing base template to TRL

--- a/index.html
+++ b/index.html
@@ -7,20 +7,20 @@
     <meta name="author" content="Company of One">
     <meta name="language" content="english"> 
 
-    <meta property="og:title" content="Company of One">
+    <meta property="og:title" content="The Reading List">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="http://ofone.co">
+    <meta property="og:url" content="http://thereadinglist.co/">
     <meta property="og:site_name" content="Company of One">
-    <meta property="og:description" content="A book about business growth, by Paul Jarvis">
+    <meta property="og:description" content="Books that help you improve yourself, a curated list from Paul Jarvis.">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:domain" content="http://ofone.co">
-    <meta name="twitter:title" content="Company of One">
-    <meta name="twitter:description" content="A book about business growth, by Paul Jarvis">
+    <meta name="twitter:domain" content="http://thereadinglist.co/">
+    <meta name="twitter:title" content="The Reading List">
+    <meta name="twitter:description" content="Books that help you improve yourself, a curated list from Paul Jarvis.">
 
-    <title>Company of One | A book about business growth, by Paul Jarvis.</title>
-    <meta name="description" content="A book about business growth, by Paul Jarvis">
+    <title>The Reading List | Books that help you improve yourself, a curated list from Paul Jarvis.</title>
+    <meta name="description" content="Books that help you improve yourself, a curated list from Paul Jarvis.">
 
-    <link rel="stylesheet" media="all" href="co1.css">
+    <link rel="stylesheet" media="all" href="trl.css">
 		
 		<script>
 		  (function(d) {
@@ -37,17 +37,18 @@
 
 
   
-  <body id="ofone" class="splash">
+  <body id="trl" class="splash">
 	  
 		<section class="section clearfix">
 			
 			<div class="main">
-				<h1>Company of One</h1>
-				<p>A book about <u>not</u> growing your business, by Paul Jarvis. Published by Houghton Mifflin Harcourt late 2018.</p>
-				<p>Be the first to know when there’s more information about the book and it’s release date:</p>
+				<h1>The Reading List</h1>
+				<p>TRL is a curated, monthly list of books to read that help you improve yourself—from marketing, to business, to non-fluffy self-help.</p>
+				<p>These are the books that I’m reading that you might want to read as well. You’re busy, but love to read, I want to help make that easier by suggesting some choice titles.</p>
+				<p>This tiny project was created by <a href="https://pjrvs.com/">Paul Jarvis</a>, an author and entrepreneur, but more importantly, an avid reader.</p>
 			
 				<form action="//pjrvs.us6.list-manage.com/subscribe/post?u=26857d08cfc91db6993e0bfc4&amp;id=3f954190de" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-					<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="Your email..."><input type="hidden" name="LOCATION" value="co1"><input type="hidden" name="LIST" value="pjrvs"><button type="submit">Let me know</button>  
+					<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="Your email..."><input type="hidden" name="LOCATION" value="trl"><input type="hidden" name="LIST" value="pjrvs"><button type="submit">I want in</button>  
 					<div id="mce-responses" class="clear">
 						<div class="response" id="mce-error-response" style="display:none"></div>
 						<div class="response" id="mce-success-response" style="display:none"></div>
