oops wrong MC list

--- a/index.html
+++ b/index.html
@@ -43,18 +43,24 @@
 			
 			<div class="main">
 				<h1>The Reading List</h1>
-				<p>TRL is a curated, monthly list of books to read that help you improve yourself—from marketing, to business, to non-fluffy self-help.</p>
+				<p>I’ve always believed books have the power to change lives for the better. TRL is a curated, monthly list of books to read that help you improve yourself—from marketing, to business, to non-fluffy self-help.</p>
 				<p>These are the books that I’m reading that you might want to read as well. You’re busy, but love to read, I want to help make that easier by suggesting some choice titles.</p>
 				<p>This tiny project was created by <a href="https://pjrvs.com/">Paul Jarvis</a>, an author and entrepreneur, but more importantly, an avid reader.</p>
 			
-				<form action="//pjrvs.us6.list-manage.com/subscribe/post?u=26857d08cfc91db6993e0bfc4&amp;id=3f954190de" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-					<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="Your email..."><input type="hidden" name="LOCATION" value="trl"><input type="hidden" name="LIST" value="pjrvs"><button type="submit">I want in</button>  
+				<form action="//pjrvs.us6.list-manage.com/subscribe/post?u=26857d08cfc91db6993e0bfc4&amp;id=cbf8273708" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+					<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="Your email..."><button type="submit">Send me TRL</button>  
 					<div id="mce-responses" class="clear">
 						<div class="response" id="mce-error-response" style="display:none"></div>
 						<div class="response" id="mce-success-response" style="display:none"></div>
 					</div>
-				  <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_26857d08cfc91db6993e0bfc4_3f954190de" tabindex="-1" value=""></div>
+				  <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_26857d08cfc91db6993e0bfc4_cbf8273708" tabindex="-1" value=""></div>
 				</form>
+
+
+
+
+
+
 
 			</div>
 			
@@ -70,7 +76,7 @@
 	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 	  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 	
-	  ga('create', 'UA-99109260-1', 'auto');
+	  ga('create', 'UA-99109260-2', 'auto');
 	  ga('send', 'pageview');
 	
 	</script>
